change in navigation links

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -24,7 +24,7 @@
                         <div class="col-md-12 form-group">
                             <textarea id="message" class="form-control" name="message" placeholder="Message" rows="4" required></textarea>
                         </div>
-                        <input type="hidden" name="_next" value="https://narendrasingh.in/#contact" />
+                        <input type="hidden" name="_next" value="{{ site.url }}" />
                         <input type="text" name="_gotcha" style="display:none" />
                         <div class="col-md-12 text-center">
                             <button class="btn" type="submit">Submit Now</button>
