--- a/_includes/top_nav.html
+++ b/_includes/top_nav.html
@@ -4,7 +4,7 @@
             <div class="col-md-3 col-md-offset-1 col-sm-3">
                 <!-- START LOGO DESIGN AREA -->
                 <div class="logo">
-                    <a href="">{{site.author}}</a>
+                    <a href="{{site.url}}">{{site.author}}</a>
                 </div>
                 <!-- END LOGO DESIGN AREA -->
             </div>
@@ -21,12 +21,12 @@
                         </div>
                         <div class="navbar-collapse collapse">
                             <ul class="nav navbar-nav navbar-right">
-                                <li><a class="smoth-scroll" href="#home">Home</a></li>
-                                <li><a class="smoth-scroll" href="#about">About</a></li>
+                                <li><a class="smoth-scroll" href="{{site.url}}#home">Home</a></li>
+                                <li><a class="smoth-scroll" href="{{site.url}}#about">About</a></li>
                                 <!--li><a class="smoth-scroll" href="#project">Projets</a></li-->
                                 <!--li><a href="{{site.url}}/resume/">Resume</a></li-->
                                 <!--li><a href="{{site.url}}/blog/">Blog</a></li-->
-                                <li><a class="smoth-scroll" href="#contact">Contact</a></li>
+                                <li><a class="smoth-scroll" href="{{site.url}}#contact">Contact</a></li>
                             </ul>
                         </div>
                     </div>
