--- a/_includes/welcome.html
+++ b/_includes/welcome.html
@@ -16,7 +16,7 @@
 			    {% include social.html %}
 			    </div>
 		            <div class="home-arrow-down text-center">
-		                <a href="{{site.url}}#about" class="smoth-scroll btn"><i class="fa fa-angle-double-down"></i></a>
+		                <a href="#about" class="smoth-scroll btn"><i class="fa fa-angle-double-down"></i></a>
 		            </div>
                     </div>
                 </div>
