--- a/_includes/top_nav.html
+++ b/_includes/top_nav.html
@@ -24,7 +24,7 @@
                                 <li><a class="smoth-scroll" href="#home">Home</a></li>
                                 <li><a class="smoth-scroll" href="#about">About</a></li>
                                 <!--li><a class="smoth-scroll" href="#project">Projets</a></li-->
-                                <!--li><a href="{{site.url}}/resume/">Resume</a></li-->
+                                <li><a href="{{ "/assets/pdf/resume.pdf" | prepend: site.baseurl }}" target="_blank">Resume</a></li>
                                 <!--li><a href="{{site.url}}/blog/">Blog</a></li-->
                                 <li><a class="smoth-scroll" href="#contact">Contact</a></li>
                             </ul>
