smooth-scroll test

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,7 +8,7 @@
   		</blockquote>
 		</div> 
 		<div class="col-sm-4 wow fadeInUp" data-wow-delay="0.1s" >
-		<p>If you like what you see here, over my blog or GitHub repositories, let's talk. I'd <i class="fa fa-heart" style="color:red;"></i> to hear from you.</p>
+		<p>If you like what you see here, over my blog or GitHub repositories, let's talk. I'd love to hear from you.</p>
 		</div>
 		<div class="col-sm-3 wow fadeInUp" data-wow-delay="0.1s">
 			<div class="line-heading">
