--- a/_includes/top_nav.html
+++ b/_includes/top_nav.html
@@ -22,11 +22,11 @@
                         <div class="navbar-collapse collapse">
                             <ul class="nav navbar-nav navbar-right">
                                 <li><a class="smoth-scroll" href="#home">Home</a></li>
-                                <li><a class="smoth-scroll" href="#about">About</a></li>
+                                <li><a class="smoth-scroll" href="{{page.url}}">About</a></li>
                                 <!--li><a class="smoth-scroll" href="#project">Projets</a></li-->
                                 <li><a href="{{ "/assets/pdf/resume.pdf" | prepend: site.baseurl }}" target="_blank">Resume</a></li>
-                                <!--li><a href="{{site.url}}/blog/">Blog</a></li-->
-                                <li><a class="smoth-scroll" href="#contact">Contact</a></li>
+                                <li><a href="{{site.url}}/blog/">Blog</a></li>
+                                <li><a class="smoth-scroll" href="{% if page.url != site.url %}True{% else %}False{% endif %}#contact">Contact</a></li>
                             </ul>
                         </div>
                     </div>
