--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@
 */
 
 body {
-    font-size: 14px;
+    font-size: 16px;
     font-weight: 200;
     line-height: 24px;
     font-family: 'Poppins', sans-serif;
@@ -92,6 +92,28 @@ fieldset {
 .container, .container-fluid{
   min-height: 85%;
 }
+
+
+.bg-1 {
+   background-color: #428bca; /* Green */
+   color: #ffffff;
+}
+.bg-2 {
+   background-color: #474e5d; /* Dark Blue */
+   color: #ffffff;
+ }
+.bg-3 {
+   background-color: #ffffff; /* White */
+   color: #555555;
+}
+
+.bg-4 { /* Black Gray */
+   background-color: #2f2f2f;
+   color: #ffffff;
+}
+
+
+
 /*
 * ----------------------------------------------------------------------------------------
 * PRELOADER & BOUNCE CCS STYLE
@@ -182,19 +204,12 @@ fieldset {
     height: 100%;
 }
 
-#particles-js {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-}
-
 .welcome-image-area {
     position: relative;
     height: 100%;
     background: url(../img/bg/bg.jpg);
     background-size: cover;
-    z-index: 1;
+    z-index: 10;
 }
 
 .welcome-image-area:after {
@@ -208,28 +223,7 @@ fieldset {
     z-index: -1;
 }
 
-/*
 
-removed particle-bg class from class in div having welcome-image-area class
-.particle-bg {
-    position: relative;
-    height: 100%;
-    background: url(../img/bg/bg.jpg);
-    background-size: cover;
-    z-index: 1;
-}
-
-.particle-bg:after {
-    position: absolute;
-    background: rgba(0, 0, 0, .6);
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    content: "";
-    z-index: -1;
-}
-*/
 .display-table {
     display: table;
     width: 100%;
@@ -343,14 +337,14 @@ removed particle-bg class from class in div having welcome-image-area class
     display: block;
     color: #fff;
     text-transform: capitalize;
-    font-weight: 400;
+    /*font-weight: 400;*/
     font-size: 28px;
-    font-family: 'Dancing Script', cursive;
+    font-family: 'Montserrat','Dancing Script', cursive;
+    letter-spacing: 2px;
 }
 
 .mainmenu .navbar-nav li a {
     color: #fff;
-    font-size: 14px;
     padding: 30px 15px;
     -webkit-transition: .3s;
     transition: .3s;
@@ -575,9 +569,9 @@ removed particle-bg class from class in div having welcome-image-area class
 
 .footer-area {
     background: #F7F7F7;
-    padding: 60px 0px;
-    margin: 10px 0 0;
-    min-height: 200px;
+    padding: 40px 0px;
+    margin: 20px 0 0;
+    min-height: 150px;
     position: relative;
     width: 100%;
     bottom: 0;
@@ -586,7 +580,6 @@ removed particle-bg class from class in div having welcome-image-area class
 
 .footer-area p {
     margin-bottom: 0;
-    font-size: 14px;
     color: #333030;
     margin-bottom: 20px;
     text-align: justify;
@@ -612,13 +605,12 @@ footer .copyright{
 .quote {
   position: relative;
   font-family: 'Sanchez', serif;
-  font-size: 1.4em;
+  font-size: 18px;
   line-height: 1.5em;
   color: #3d748f;
 }
 .quote footer {
   font-family: 'Noto Sans', sans-serif;
-  font-size: 0.8em;
   font-weight: 700;
   color: #d3d3cf;
   float: right;
@@ -712,7 +704,7 @@ footer .copyright{
   color: #515151;
   display: block;
   padding: 5px;
-  font-size: 18px;
+  font-size: 24px;
   -webkit-transition: all 350ms cubic-bezier(0.13, 0.43, 0.54, 1.82);
   -o-transition: all 350ms cubic-bezier(0.13, 0.43, 0.54, 1.82);
   transition: all 350ms cubic-bezier(0.13, 0.43, 0.54, 1.82);
@@ -741,8 +733,8 @@ footer .copyright{
 */
 
 .header-image {
-  width: 200px;
-  margin: 0 auto;
+  width: 300px;
+  margin: 30px auto;
   float: none;
 }
 
