--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -238,7 +238,7 @@ fieldset {
 .home-arrow-down {
     text-align: center;
     position: absolute;
-    bottom: -300px;
+    bottom: -250px;
     left: 50%;
     -webkit-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
@@ -734,7 +734,7 @@ footer .copyright{
 
 .header-image {
   width: 300px;
-  margin: 30px auto;
+  margin: 0 auto 30px;
   float: none;
 }
 
