--- a/_includes/preloader.html
+++ b/_includes/preloader.html
@@ -1,5 +1,5 @@
 <div class="preloader">
     <div class="status">
-    <div class="status-mes">{{site.author}}</div>
+    <div class="status-mes">{{site.data.author.Name}}</div>
     </div>
 </div>
