--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,16 +1,16 @@
 <footer class="footer-area">
 	<div class="container-fluid">
 	    <div class="row">
-		<div class="col-sm-5 wow fadeInUp" data-wow-delay="0.1s" >
+		<div class="col-sm-5">
 		<blockquote class="quote">
 	    If you Torture the data long enough, it will confess.<br>
 	    <footer>Ronald Coase</footer>
   		</blockquote>
 		</div> 
-		<div class="col-sm-4 wow fadeInUp" data-wow-delay="0.1s" >
+		<div class="col-sm-4" >
 		<p>If you like what you see here, over my blog or GitHub repositories, let's talk. I'd love to hear from you.</p>
 		</div>
-		<div class="col-sm-3 wow fadeInUp" data-wow-delay="0.1s">
+		<div class="col-sm-3">
 			<div class="line-heading">
 	      			<!--h3 class="line-heading-title contact-title">Contact me</h3-->
 				{% include social.html %}
