--- a/_includes/pagination.html
+++ b/_includes/pagination.html
@@ -1,19 +1,27 @@
-<div class="container">
-  <nav class="pagination" role="pagination">
-    <ul>
-      {% if paginator.previous_page %}
-        {% if paginator.previous_page == 1 %}
-        <p><a class="newer-posts" href="{{ site.baseurl }}/"><i class="fa fa-long-arrow-left" aria-hidden="true"></i></a></p>
-        {% else %}
-        <p><a class="newer-posts" href="{{ site.baseurl }}/page/{{ paginator.previous_page }}/"><i class="fa fa-long-arrow-left" aria-hidden="true"></i></a></p>
-        {% endif %}
-      {% endif %}
-
-      <p><span class="page-number">Page {{paginator.page}} of {{paginator.total_pages}}</span></p>
-
-      {% if paginator.next_page %}
-      <p><a class="older-posts" href="{{ site.baseurl }}/page/{{ paginator.next_page }}/"><i class="fa fa-long-arrow-right" aria-hidden="true"></i></a></p>
-      {% endif %}
-    </ul>
-  </nav>
-</div>
+            <div id="pagination">
+            	<nav>
+					<ul class="pagination blog_pagination">
+						{% if paginator.previous_page %}
+						<li>
+							<a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}" class="black-icon" aria-label="Previous">
+								<span aria-hidden="true"><i class="fa fa-chevron-left" aria-hidden="true"></i></span>
+							</a>
+						</li>
+						{% endif %}
+						{% for page_num in (1..paginator.total_pages) %}
+						{% if page_num == 1 %}
+						<li><a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}">{{ page_num }}</a></li>
+    					{% else %}
+						<li><a href="{{ site.baseurl }}/blog/page/{{ page_num }}/">{{page_num}}</a></li>
+						{% endif %}
+						{% endfor %}
+						{% if paginator.next_page %}
+						<li>
+							<a href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' }}" class="black-icon" aria-label="Next">
+								<span aria-hidden="true"><i class="fa fa-chevron-right" aria-hidden="true"></i></span>
+							</a>
+						</li>
+						{% endif %}
+					</ul>
+				</nav>
+			</div>
