--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,63 +2,56 @@
 layout: page
 ---
 
-
-<div class="container-fluid" style="padding-top:100px;">
+<section class="blog-page-design-area">
+<div class="container-fluid">
 	<div class="row">
-		<div class="col-md-2 col-sm-12">
-		{% include author-sidebar.html %}
-		</div>
-
-		<div class="col-md-7 col-sm-12">
-			<article class="article-page">
-			  <div class="page-content">
+		<div class="col-md-7 col-md-offset-1 col-sm-10 col-sm-offset-1">
+			<div class="single-blog-post-details wow fadeInDown" data-wow-delay="0.2s">
 			    {% if page.img %}
-			    <div class="page-cover-image">
-			      <figure>
-			        <img class="page-image" src={{ "/assets/img/post/" | prepend: site.baseurl | append : page.img}} alt="{{page.title}}">
-			        {% if page.fig-caption %}
-			          <figcaption>{{page.fig-caption}}</figcaption>
-			        {% endif %}
-			      </figure>
-			    </div> 
-			    {% else %}
+				<img class="img-responsive" src={{ "/assets/img/post/" | prepend: site.baseurl | append : page.img}} alt="{{page.title}}">
 			    {% endif %}
-			    <div class="wrap-content">
-			      <header class="header-page">
-			        <h1 class="page-title">{{page.title}}</h1>
-			        {% if page.author %}    
-			    	<span class="page-author">By: {{ page.author }}</span>
-			    	{% endif %}
-			    	{% if page.date %}
-			        <span class="page-date">{{page.date | date: '%b %d, %Y'}}&nbsp;&nbsp;&nbsp;&nbsp;</span>
-			        {% endif %}
-			      </header>
-			      {{content | markdownify}}
-			      <div class="page-footer">
-			        <div class="page-share">
-			          <a href="https://twitter.com/intent/tweet?text={{ page.title }}&url={{ site.url }}{{ page.url }}" title="Share on Twitter" rel="nofollow" target="_blank">Twitter</a>
-			          <a href="https://facebook.com/sharer.php?u={{ site.url }}{{ page.url }}" title="Share on Facebook" rel="nofollow" target="_blank">Facebook</a>
-			          <a href="https://plus.google.com/share?url={{ site.url }}{{ page.url }}" title="Share on Google+" rel="nofollow" target="_blank">Google+</a>
-			        </div>
-			        <div class="page-tag">
-			          {% for tag in page.tags %}
-			            <a href="{{site.baseurl}}/tags#{{tag}}" class="tag"> {{ tag }} 	</a>
-			          {% endfor %}
-			        </div>
-			      </div>
-			    </div>
-			  </div> 
-			</article>
-		</div>
-		<div class="col-md-3 col-sm-12">
-			Recent Posts
-			<ul>
-			{% for post in site.posts %}
+				<h2 class="page-title">{{page.title}}</h2>
+				<div class="post-date">
+					{% if page.date %}
+					<span><i class="fa fa-calendar"></i>{{page.date | date: '%d,%b %Y'}}</span>
+					{% endif %}
+					{% if page.categories %}
+					<span><i class="fa fa-folder-open-o"></i> {% for category in page.categories %}{% if forloop.last %}{{category}}{% else %}{{category}},{% endif %} {% endfor %}</span>
+					{% endif %}
+				</div>
+				{{content | markdownify}}
+				{% if page.tags %}
+				<h2>Tags</h2>
+				<div class="tag">
+					{% for tag in page.tags %}
+					<a href="{{site.baseurl}}/tags#{{tag}}">{{tag}}</a>
+					{% endfor %}
+				</div>
+				{% endif %}
 
-			<li> - <a href="{{post.url | prepend: site.baseurl}}">{{post.title}}</a> </li>
-			{% endfor %}
-			</ul>
+				<div class="single-blog-social-icon">
+					<div class="twitter"><a href="https://twitter.com/intent/tweet?text={{ page.title }}&url={{ site.url }}{{ page.url }}" title="Share on Twitter" rel="nofollow" target="_blank">Twitter</a></div>
+					<div class="facebook"><a href="https://facebook.com/sharer.php?u={{ site.url }}{{ page.url }}" title="Share on Facebook" rel="nofollow" target="_blank">Facebook</a></div>
+					<div class="google-plus"><a class="google-plus" href="https://plus.google.com/share?url={{ site.url }}{{ page.url }}" title="Share on Google+" rel="nofollow" target="_blank">Google+</a></div>
+				</div>
+
+
+				<div class="next-previews-button-design">
+					{% if page.previous.url %}
+					<a class="pull-left" href="{{page.previous.url}}"><i class="fa fa-chevron-left"></i> {{page.previous.title}}</a>
+					{% endif %}
+					{% if page.next.url %}
+					<a class="pull-right" href="{{page.next.url}}">{{page.next.title}} <i class="fa fa-chevron-right"></i></a>
+					{% endif %}
+				</div>
+
+			</div>
 		</div>
+		<!-- START BLOG SIDEBAR DESIGN AREA -->
+		<div class="col-md-3 col-md-offset-0 col-sm-10 col-sm-offset-1">
+			{% include blog_sidebar.html %}
+		</div>
+		<!-- / EMD BLOG SIDEBAR DESIGN AREA -->
 	</div>
 </div>
 
