--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -27,6 +27,10 @@
         padding-top: 0px;
         margin-top: 30px;
     }
+
+    .header-image {
+    width: 200px;
+    }
 }
 
 
@@ -103,12 +107,12 @@
     .header-text .home-arrow-down {
         bottom: -90px;
     }
-    .about-text {
-        padding-top: 0px;
+
+    .header-image {
+    width: 200px;
     }
-    .about-text h3 {
-        margin-bottom: 20px;
-    }
+
+
     .single-project-complete {
         margin-bottom: 50px;
     }
@@ -127,13 +131,19 @@
         min-width: 100%;
     }
     .about-text {
-        padding-top: 0px;
-        margin-top: 30px;
+        padding-top: 30px;
     }
+
+
+    .about-text h3 {
+        margin-bottom: 20px;
+    }
+
     .about-text ul li {
         width: 100%;
     }
     .single-service i {
         margin-bottom: 105px;
     }
+
 }
